--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p>Comecei a atuar em 2014</p>
                         <ul>
                             <li>
-                                <strong>Função: </strong>Interprete de LIBRAS.
+                                <strong>Função: </strong>Intérprete de LIBRAS.
                                 <li><strong>Projeto que participei: </strong>Faculdade Estácio (curso de administração), Roquette Pinto (curso de MBA em Rádio e TV) e evento no
                                     Maracanã do Google Cloud (25/05/2018).</li>
                             </li>
