--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <p> Possuo uma natureza técnica, especializada e orientada para a qualidade na organização. Tenho um desejo inato de fazer as
                     coisas de maneira certa. Prefiro lidar com aspectos técnicos. Acho importante fórmulas, fatos lógica e sistemas.
                     Sou capaz de trabalhar de modo constante, sou meticuloso e perseverante para acompanhar uma tarefa até a sua conclusão.
-                    Também sou cooperativo, cauteloso, organizado, metódico e orientado a rotina. Me concentro em detalhes e tenho capacidade
+                    Também sou cooperativo, cauteloso, organizado e orientado a rotina. Me concentro em detalhes e tenho capacidade
                     analítica com um alto nível de controle de qualidade.</p>
             </div>
 
