--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p> 21/03/2019 até 14/05/2020</p>
                         <ul>
                             <li>
-                                <strong>Função: </strong>Projetista e Adminiistrador de Softwares
+                                <strong>Função: </strong>Projetista e Administrador de Softwares
                                 <p>
                                     Formas e armaduras industriais infraestruturas e superestruturas.
                                     Administrar os softwares da empresa e desenvolver métodos de automatiza-los.
