--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <header>
             <!-- CAIXA FOTO DE PERFIL -->
             <figure>
-                <img src="https://media-exp1.licdn.com/dms/image/C5603AQG_vcMx8BQr0w/profile-displayphoto-shrink_200_200/0/1516784472483?e=1622678400&v=beta&t=eA8phb4TSWLC4DJIfEgC6RAC126HgzW_Qu5zIHAhvUo" alt="">
-                <img src="https://avatars.githubusercontent.com/u/65143979?s=400&u=fdebe2d9fc36538220c7d3f05e599aac4657f2df&v=4" alt="">
+                <img src="https://avatars.githubusercontent.com/u/65143979?s=400&u=fdebe2d9fc36538220c7d3f05e599aac4657f2df&v=4" alt="" style="width=200px">
                 <figcaption class="hidden">Juan Santos</figcaption>
             </figure>
 
