--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <!-- CAIXA FOTO DE PERFIL -->
             <figure>
-                <img src="https://avatars.githubusercontent.com/u/65143979?s=400&u=fdebe2d9fc36538220c7d3f05e599aac4657f2df&v=4" alt="" style="width=200px">
+                <img src="https://avatars.githubusercontent.com/u/65143979?s=400&u=fdebe2d9fc36538220c7d3f05e599aac4657f2df&v=4" alt="" style="width: 200px">
                 <figcaption class="hidden">Juan Santos</figcaption>
             </figure>
 
